# tars

./: .cz-config.js  README.md  package.json  pnpm-lock.yaml
apps/api/: .dockerignore  .env.example  .gitignore  README.md  compose.yml  main.py  package.json  prettier.config.js  pyproject.toml  ruff.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 1556678d474c_add_user_model.py  1fd409eefcd2_add_user_table.py  4723c3bba716_add_user_table.py  4d760a909ff5_add_cadidate_model.py  50e9417c3c19_add_knowledge_base_document_model.py  d2d57b55dbbf_add_file_table.py  e085de40e6bd_add_user_table.py  e81f8f58436d_add_user_table.py
apps/api/src/: router.py
apps/api/src/celery/: schema.py  tasks.py  utils.py
apps/api/src/core/: config.py  db.py  dependencies.py  jwt.py  security.py  vector_db.py
apps/api/src/core/controller/: base.py
apps/api/src/core/factory/: factory.py
apps/api/src/core/repository/: base.py  factory.py
apps/api/src/models/: mixins.py  models.py
apps/api/src/modules/: models.py
apps/api/src/modules/agent/: agent.py  controller.py  router.py  schema.py  state.py
apps/api/src/modules/auth/: controller.py  router.py
apps/api/src/modules/candidate/: controller.py  repository.py  router.py  schema.py
apps/api/src/modules/file_storage/: controller.py  router.py  schema.py
apps/api/src/modules/knowledge_base/: controller.py  repository.py  router.py  schema.py
apps/api/src/modules/llm_models/: azure_openai.py  deepseek.py  embedding.py  model.py  open_ai.py  types.py
apps/api/src/modules/users/: controller.py  models.py  repository.py  router.py  service.py
apps/api/src/utils/: resume_parser.py
(+65 files in other folders)
