[project]
name = "tars-api"
version = "0.1.0"
description = "TARS - API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "fastapi[standard]>=0.118.2",
    "langchain>=1.0.0",
    "langchain-deepseek>=1.0.0",
    "langchain-openai>=1.0.0",
    "langgraph>=1.0.0",
    "passlib[argon2]>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.11.0",
    "pyjwt>=2.10.1",
    "sqlmodel>=0.0.27",
    "typed-settings>=25.1.0",
]

[dependency-groups]
dev = ["ruff>=0.14.0"]


[tool.alembic]

script_location = "%(here)s/alembic"


prepend_sys_path = ["."]

[[tool.alembic.post_write_hooks]]
# lint with attempts to fix using "ruff" - use the module runner, against the "ruff" module
name = "ruff"
type = "module"
module = "ruff"
options = "check --fix REVISION_SCRIPT_FILENAME"
